# CPP_rtype_2019

./: CMakeLists.txt  Makefile  conanfile.txt  gameserver  start.sh
Docs/: README.md  protocole_rfc.txt
engine/: assets_manager.cpp  bullet.cpp  enemy.cpp  game_info.cpp  main.cpp  music.cpp  player.cpp  screen_game.cpp  screen_lobby.cpp  screen_menu.cpp  screen_play.cpp  screen_settings.cpp  sockets.cpp  sounds.cpp
engine/include/: assets_manager.hpp  bullet.hpp  cScreen.hpp  enemy.hpp  game_info.hpp  music.hpp  player.hpp  screen.hpp  screen_game.hpp  screen_lobby.hpp  screen_menu.hpp  screen_play.hpp  screen_settings.hpp  sockets.hpp  sounds.hpp
server/: main.cpp  player.cpp  room.cpp  serverSockets.cpp  sockets.cpp
server/includes/: Enemy.hpp  bullets.hpp  libs.hpp  player.hpp  room.hpp  server.hpp  serverSockets.hpp
